--- a/src/main/java/view/Izbornik.form
+++ b/src/main/java/view/Izbornik.form
@@ -85,7 +85,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jToolBar1" alignment="1" max="32767" attributes="0"/>
+          <Component id="jToolBar1" alignment="1" pref="271" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
