--- a/src/main/java/view/Izbornik.form
+++ b/src/main/java/view/Izbornik.form
@@ -46,6 +46,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Polaznici"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem3">
               <Properties>
