--- a/src/main/java/view/Autorizacija.form
+++ b/src/main/java/view/Autorizacija.form
@@ -31,12 +31,12 @@
               <Group type="103" groupAlignment="1" max="-2" attributes="0">
                   <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtEmail" alignment="0" pref="98" max="32767" attributes="0"/>
+                  <Component id="txtEmail" alignment="0" pref="157" max="32767" attributes="0"/>
                   <Component id="txtLozinka" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="63" max="32767" attributes="0"/>
           </Group>
-          <Component id="buttonPrijava" pref="137" max="32767" attributes="0"/>
+          <Component id="btnPrijava" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -50,7 +50,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="txtLozinka" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="39" max="32767" attributes="0"/>
-              <Component id="buttonPrijava" min="-2" pref="48" max="-2" attributes="0"/>
+              <Component id="btnPrijava" min="-2" pref="48" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -80,12 +80,12 @@
         <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtEmailKeyPressed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="buttonPrijava">
+    <Component class="javax.swing.JButton" name="btnPrijava">
       <Properties>
         <Property name="text" type="java.lang.String" value="Prijava"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonPrijavaActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPrijavaActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
